syntax = "proto3";
package org.kobe.xbot.Utilities.Entities;

message XTableMessage {
  Command command = 1;
  optional string key = 2;
  optional bytes value = 3;
  optional Type type = 4;
  optional bytes id = 5;
  repeated XTableMessage batch = 6;
  optional uint64 timestamp = 7;
  message XTablesData {
    map<string, XTablesData> data = 1;  // Nested data map
    bytes value = 2;                    // Byte array for storing values
    Type type = 3; // Enum for type
  }
  enum Type {
    UNKNOWN = 0;
    STRING = 1;
    DOUBLE = 2;
    INT32 = 3;
    INT64 = 5;
    BOOL = 6;
    BYTES = 7;
    ENUM = 8;
    MESSAGE = 9;
    DOUBLE_LIST = 10;
    STRING_LIST = 11;
    FLOAT_LIST = 12;
    INTEGER_LIST = 13;
    LONG_LIST = 14;
    BOOLEAN_LIST = 15;
    BYTES_LIST = 16;
    OBJECT = 17;
    POSE2D = 18;
    POSE3D = 19;
    COORDINATES = 20;
    BEZIER_CURVES = 21;
    BEZIER_CURVE = 22;
    BEZIER_CURVES_LIST = 23;
  }
  enum Command {
    UNKNOWN_COMMAND = 0;
    PUT = 1;
    GET = 2;
    DEBUG = 3;
    GET_TABLES = 4;
    RUN_SCRIPT = 5;
    UPDATE_KEY = 6;
    DELETE = 7;
    PUBLISH = 8;
    SUBSCRIBE_DELETE = 9;
    UNSUBSCRIBE_DELETE = 10;
    UNSUBSCRIBE_UPDATE = 11;
    PING = 12;
    GET_RAW_JSON = 13;
    DELETE_EVENT = 14;
    UPDATE_EVENT = 15;
    INFORMATION = 16;
    REBOOT_SERVER = 17;
    REGISTRY = 18;
    BATCH = 19;
    GET_PROTO_DATA = 20;
  }
  message XTableLog {
    Level level = 1;
    string message = 2;
    enum Level {
      UNKNOWN = 0;
      INFO = 1;
      WARNING = 2;
      SEVERE = 3;
      FATAL = 4;
    }
  }
  message XTableUpdate {
    string key = 1;
    Category category = 2;
    bytes value = 3;
    XTableMessage.Type type = 4;
    optional uint64 timestamp = 5;
    enum Category {
      UNKNOWN = 0;
      UPDATE = 1;
      DELETE = 2;
      PUBLISH = 3;
      REGISTRY = 4;
      INFORMATION = 5;
      LOG = 6;
    }
  }

  message ClientInfo {
    string ip_address = 1;
    string hostname = 2;
    string operating_system = 3;
    int32 port = 4;
    bool is_active = 5;
    string version = 6;
    string user_agent = 7;
  }
}
